# dance-on-location

./: LICENSE.md  README.md
.github/workflows/: main.yml
backend/: .gitignore  Cargo.toml
backend/migrations/: 20240722135522_videos.sql
backend/src/: auth.rs  main.rs  playback.rs  video.rs
dol_backend/: Cargo.toml
dol_backend/src/: main.rs
dol_frontend/: angular.json  package-lock.json
dol_frontend/src/app/login/: login.component.ts
dol_frontend/src/app/upload/: upload.component.ts
frontend/: .prettierrc  README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.css  styles.scss
frontend/src/app/: app.component.css  app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
frontend/src/app/guards/: auth-guard.guard.ts
frontend/src/app/home/: home.component.css  home.component.html  home.component.scss  home.component.spec.ts  home.component.ts
frontend/src/app/login/: login.component.css  login.component.html  login.component.scss  login.component.spec.ts  login.component.ts
frontend/src/app/manage/: manage.component.css  manage.component.html  manage.component.scss  manage.component.spec.ts  manage.component.ts
frontend/src/app/playback/: playback.component.css  playback.component.html  playback.component.scss  playback.component.spec.ts  playback.component.ts
frontend/src/app/services/: auth.service.ts  video.service.ts
frontend/src/app/upload/: upload.component.ts
frontend/src/environments/: environment.prod.ts
