[package]
name = "dance-on-location-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.1", features = ["typed-header"] }
headers = "0.4.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
shuttle-axum = "0.46.0"
shuttle-runtime = "0.46.0"
shuttle-shared-db = { version = "0.46.0", features = ["postgres", "sqlx"] }
sqlx = { version = "0.7.4", features = ["macros"] }
tokio = "1.28.2"
tower-http = { version = "0.5.2", features = ["cors"] }
tracing-subscriber = "0.3.17"
