[package]
name = "dol_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
hyper = { version = "1.4.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9.3.0"
bcrypt = "0.15.1"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-rustls"] }
tower-http = { version = "0.5.2", features = ["cors"] }
